--- a/intl.zh-CN/资源类型/资源类型索引.md
+++ b/intl.zh-CN/资源类型/资源类型索引.md
@@ -4,7 +4,7 @@
 
 |阿里云产品|资源类型|
 |-----|----|
-|应用配置管理ACM（Application Configuration Management）|-   [ALIYUN::ACM::Configuration](/intl.zh-CN/资源类型/ACM/ALIYUN::ACM::Configuration.md)：创建配置
+|应用配置管理ACM|-   [ALIYUN::ACM::Configuration](/intl.zh-CN/资源类型/ACM/ALIYUN::ACM::Configuration.md)：创建配置
 -   [ALIYUN::ACM::Namespace](/intl.zh-CN/资源类型/ACM/ALIYUN::ACM::Namespace.md)：创建命名空间 |
 |操作审计（ActionTrail）|-   [ALIYUN::ACTIONTRAIL::Trail](/intl.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::Trail.md)：审计数据保存到指定的OSS存储桶中
 -   [ALIYUN::ACTIONTRAIL::TrailLogging](/intl.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::TrailLogging.md)：启用或关闭跟踪的日志记录 |
@@ -16,28 +16,34 @@
 -   [ALIYUN::ApiGateway::Group](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Group.md)：创建API分组
 -   [ALIYUN::ApiGateway::Instance](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Instance.md)：创建专享实例
 -   [ALIYUN::ApiGateway::LogConfig](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::LogConfig.md)：创建日志配置
+-   [ALIYUN::ApiGateway::Plugin](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Plugin.md)：创建API网关插件
+-   [ALIYUN::ApiGateway::PluginAttachment](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::PluginAttachment.md)：将插件绑定到API
 -   [ALIYUN::ApiGateway::Signature](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Signature.md)：创建后端签名密钥
 -   [ALIYUN::ApiGateway::SignatureBinding](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::SignatureBinding.md)：绑定API与后端签名密钥
 -   [ALIYUN::ApiGateway::StageConfig](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::StageConfig.md)：创建API分组中测试、预发、线上环境变量
 -   [ALIYUN::ApiGateway::TrafficControl](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControl.md)：创建用户自定义的流控策略
 -   [ALIYUN::ApiGateway::TrafficControlBinding](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControlBinding.md)：为API绑定用户自定义流控
 -   [ALIYUN::ApiGateway::VpcAccessConfig](/intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::VpcAccessConfig.md)：配置VPC授权以便专有网络的API能对外提供服务 |
-|应用实时监控服务ARMS（Application Real-Time Monitoring Service）|-   [ALIYUN::ARMS::AlertContact](/intl.zh-CN/资源类型/ARMS/ALIYUN::ARMS::AlertContact.md)：创建报警联系人
+|应用实时监控服务ARMS|-   [ALIYUN::ARMS::AlertContact](/intl.zh-CN/资源类型/ARMS/ALIYUN::ARMS::AlertContact.md)：创建报警联系人
 -   [ALIYUN::ARMS::AlertContactGroup](/intl.zh-CN/资源类型/ARMS/ALIYUN::ARMS::AlertContactGroup.md)：创建报警联系人分组
 -   [ALIYUN::ARMS::RetcodeApp](/intl.zh-CN/资源类型/ARMS/ALIYUN::ARMS::RetcodeApp.md)：创建前端监控任务 |
-|阿里云服务网格ASM（Alibaba Cloud Service Mesh）|[ALIYUN::ASM::ServiceMesh](/intl.zh-CN/资源类型/ASM/ALIYUN::ASM::ServiceMesh.md)：创建服务网格实例|
+|阿里云服务网格ASM|[ALIYUN::ASM::ServiceMesh](/intl.zh-CN/资源类型/ASM/ALIYUN::ASM::ServiceMesh.md)：创建服务网格实例|
 |阿里云交易和账单管理API（BSS）|[ALIYUN::BSS::WaitOrder](/intl.zh-CN/资源类型/BSS/ALIYUN::BSS::WaitOrder.md)：等待订单结束|
 |SSL证书（SSL Certificates）|[ALIYUN::CAS::Certificate](/intl.zh-CN/资源类型/CAS/ALIYUN::CAS::Certificate.md)：添加证书|
-|内容分发网络CDN（Content Delivery Network）|-   [ALIYUN::CDN::Domain](/intl.zh-CN/资源类型/CDN/ALIYUN::CDN::Domain.md)：添加加速域名
+|内容分发网络CDN|-   [ALIYUN::CDN::Domain](/intl.zh-CN/资源类型/CDN/ALIYUN::CDN::Domain.md)：添加加速域名
 -   [ALIYUN::CDN::DomainConfig](/intl.zh-CN/资源类型/CDN/ALIYUN::CDN::DomainConfig.md)：域名批量配置 |
-|云企业网CEN（Cloud Enterprise Network）|-   [ALIYUN::CEN::CenInstance](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstance.md)：创建云企业网实例
+|云企业网CEN|-   [ALIYUN::CEN::CenInstance](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstance.md)：创建云企业网实例
 -   [ALIYUN::CEN::CenInstanceAttachment](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstanceAttachment.md)：加载网络实例到云企业网实例中
 -   [ALIYUN::CEN::CenBandwidthPackage](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackage.md)：创建带宽包
 -   [ALIYUN::CEN::CenBandwidthPackageAssociation](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackageAssociation.md)：将带宽包绑定到指定的云企业网实例
 -   [ALIYUN::CEN::CenBandwidthLimit](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthLimit.md)：设置带宽包中两个地域间的跨地域互通带宽
--   [ALIYUN::CEN::RouteEntry](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::RouteEntry.md)：将加载到CEN中的VPC或VBR的路由条目发布到CEN中 |
+-   [ALIYUN::CEN::RouteEntry](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::RouteEntry.md)：将加载到CEN中的VPC或VBR的路由条目发布到CEN中
+-   [ALIYUN::CEN::CenRouteMap](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenRouteMap.md)：创建路由策略
+-   [ALIYUN::CEN::CenVbrHealthCheck](/intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenVbrHealthCheck.md)：开启边界路由器（VBR）的健康检查功能或者修改VBR的健康检查配置 |
+|云数据库ClickHouse|[ALIYUN::ClickHouse::DBCluster](/intl.zh-CN/资源类型/ClickHouse/ALIYUN::ClickHouse::DBCluster.md)：创建ClickHouse集群|
 |云防火墙（Cloud Firewall）|-   [ALIYUN::CLOUDFW::AddressBook](/intl.zh-CN/资源类型/CLOUDFW/ALIYUN::CLOUDFW::AddressBook.md)：添加安全访问控制地址簿，包括IP地址簿、ECS标签地址簿、端口地址簿和域名地址簿。
--   [ALIYUN::CLOUDFW::ControlPolicy](/intl.zh-CN/资源类型/CLOUDFW/ALIYUN::CLOUDFW::ControlPolicy.md)：添加访问控制策略 |
+-   [ALIYUN::CLOUDFW::ControlPolicy](/intl.zh-CN/资源类型/CLOUDFW/ALIYUN::CLOUDFW::ControlPolicy.md)：添加访问控制策略
+-   [ALIYUN::CLOUDFW::VpcFirewallControlPolicy](/intl.zh-CN/资源类型/CLOUDFW/ALIYUN::CLOUDFW::VpcFirewallControlPolicy.md)：为指定VPC边界防火墙策略组添加访问控制策略 |
 |云监控（CloudMonitor）|-   [ALIYUN::CMS::Contact](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::Contact.md)：创建报警联系人
 -   [ALIYUN::CMS::ContactGroup](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::ContactGroup.md)：创建报警联系人组
 -   [ALIYUN::CMS::EventRule](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::EventRule.md)：创建或者修改事件的报警规则
@@ -50,31 +56,34 @@
 -   [ALIYUN::CMS::MonitorGroup](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md)：创建一个应用分组
 -   [ALIYUN::CMS::MonitorGroupInstances](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroupInstances.md)：添加资源到应用分组
 -   [ALIYUN::CMS::SiteMonitor](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::SiteMonitor.md)：创建站点监控的监控任务 |
-|容器镜像服务ACR（Alibaba Cloud Container Registry）|-   [ALIYUN::CR::InstanceEndpointAclPolicy](/intl.zh-CN/资源类型/CR/ALIYUN::CR::InstanceEndpointAclPolicy.md)：为公网实例访问入口创建白名单策略
+|配置审计（Config）|-   [ALIYUN::Config::CompliancePack](/intl.zh-CN/资源类型/Config/ALIYUN::Config::CompliancePack.md)：创建合规包
+-   [ALIYUN::Config::DeliveryChannel](/intl.zh-CN/资源类型/Config/ALIYUN::Config::DeliveryChannel.md)：创建或更新投递渠道
+-   [ALIYUN::Config::Rule](/intl.zh-CN/资源类型/Config/ALIYUN::Config::Rule.md)：新建或修改规则 |
+|容器镜像服务ACR|-   [ALIYUN::CR::InstanceEndpointAclPolicy](/intl.zh-CN/资源类型/CR/ALIYUN::CR::InstanceEndpointAclPolicy.md)：为公网实例访问入口创建白名单策略
 -   [ALIYUN::CR::Namespace](/intl.zh-CN/资源类型/CR/ALIYUN::CR::Namespace.md)：创建一个新的命名空间
 -   [ALIYUN::CR::Repository](/intl.zh-CN/资源类型/CR/ALIYUN::CR::Repository.md)：创建一个新的仓库 |
-|容器服务Kubernetes版ACK（Alibaba Cloud Container Service for Kubernetes）|-   [ALIYUN::CS::AnyCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::AnyCluster.md)：创建任意类型的Kubernetes集群实例
+|容器服务Kubernetes版ACK|-   [ALIYUN::CS::AnyCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::AnyCluster.md)：创建任意类型的Kubernetes集群实例
 -   [ALIYUN::CS::KubernetesCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::KubernetesCluster.md)：创建Kubernetes专有版集群
 -   [ALIYUN::CS::ManagedEdgeKubernetesCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::ManagedEdgeKubernetesCluster.md)：创建Kubernetes边缘托管版集群实例
 -   [ALIYUN::CS::ManagedKubernetesCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::ManagedKubernetesCluster.md)：创建Kubernetes托管版集群
 -   [ALIYUN::CS::ServerlessKubernetesCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::ServerlessKubernetesCluster.md)：创建Serverless Kubernetes集群实例 |
 |阿里云流数据处理平台DataHub|-   [ALIYUN::DATAHUB::Project](/intl.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Project.md)：创建数据总线项目
 -   [ALIYUN::DATAHUB::Topic](/intl.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Topic.md)：创建Topic |
-|数据库备份DBS（Database Backup）|[ALIYUN::DBS::RestoreTask](/intl.zh-CN/资源类型/DBS/ALIYUN::DBS::RestoreTask.md)：创建数据库备份DBS（Database Backup）恢复任务|
-|数据管理DMS（Data Management Service）|-   [ALIYUN::DMS::Instance](/intl.zh-CN/资源类型/DMS/ALIYUN::DMS::Instance.md)：录入本企业新数据库实例
+|数据库备份DBS|[ALIYUN::DBS::RestoreTask](/intl.zh-CN/资源类型/DBS/ALIYUN::DBS::RestoreTask.md)：创建数据库备份DBS（Database Backup）恢复任务|
+|数据管理DMS|-   [ALIYUN::DMS::Instance](/intl.zh-CN/资源类型/DMS/ALIYUN::DMS::Instance.md)：录入本企业新数据库实例
 -   [ALIYUN::DMS::User](/intl.zh-CN/资源类型/DMS/ALIYUN::DMS::User.md)：录入本企业的新用户 |
-|云解析DNS（Alibaba Cloud DNS）|-   [ALIYUN::DNS::Domain](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md)：添加域名
+|云解析DNS|-   [ALIYUN::DNS::Domain](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md)：添加域名
 -   [ALIYUN::DNS::DomainGroup](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainGroup.md)：添加域名分组
 -   [ALIYUN::DNS::DomainRecord](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md)：添加解析记录 |
 |云原生分布式数据库PolarDB-X|-   [ALIYUN::DRDS::DrdsDB](/intl.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsDB.md)：创建PolarDB-X云原生分布式数据库
 -   [ALIYUN::DRDS::DrdsInstance](/intl.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsInstance.md)：创建分布式关系型数据库 |
-|数据传输服务DTS（Data Transmission Service）|-   [ALIYUN::DTS::ConsumerGroup]()：为数据订阅实例创建消费组
+|数据传输服务DTS|-   [ALIYUN::DTS::ConsumerGroup]()：为数据订阅实例创建消费组
 -   [ALIYUN::DTS::SubscriptionInstance]()：创建订阅实例、配置订阅通道
 -   [ALIYUN::DTS::SynchronizationJob]()：购买同步实例、配置同步作业
 -   [ALIYUN::DTS::MigrationJob]()：创建、配置数据迁移任务 |
-|弹性容器实例ECI（Elastic Container Instance）|-   [ALIYUN::ECI::ContainerGroup](/intl.zh-CN/资源类型/ECI/ALIYUN::ECI::ContainerGroup.md)：创建容器组
+|弹性容器实例ECI|-   [ALIYUN::ECI::ContainerGroup](/intl.zh-CN/资源类型/ECI/ALIYUN::ECI::ContainerGroup.md)：创建容器组
 -   [ALIYUN::ECI::ImageCache](/intl.zh-CN/资源类型/ECI/ALIYUN::ECI::ImageCache.md)：创建镜像缓存 |
-|云服务器ECS（Elastic Compute Service）|-   [ALIYUN::ECS::AutoProvisioningGroup](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoProvisioningGroup.md)：创建弹性供应组
+|云服务器ECS|-   [ALIYUN::ECS::AutoProvisioningGroup](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoProvisioningGroup.md)：创建弹性供应组
 -   [ALIYUN::ECS::AutoSnapshotPolicy](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoSnapshotPolicy.md)：自动快照策略
 -   [ALIYUN::ECS::AssignIpv6Addresses](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::AssignIpv6Addresses.md)：为弹性网卡分配一个或多个IPv6地址
 -   [ALIYUN::ECS::AssignPrivateIpAddresses](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::AssignPrivateIpAddresses.md)：为一块弹性网卡分配一个或多个辅助私有IP地址
@@ -112,15 +121,18 @@
 -   [ALIYUN::ECS::SSHKeyPairAttachment](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SSHKeyPairAttachment.md)：绑定SSH密钥和ECS实例
 -   [ALIYUN::ECS::VPC](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::VPC.md)：创建专有网络
 -   [ALIYUN::ECS::VSwitch](/intl.zh-CN/资源类型/ECS/ALIYUN::ECS::VSwitch.md)：创建专有网络中的虚拟交换机 |
-|企业级分布式应用服务EDAS（Enterprise Distributed Application Service）|-   [ALIYUN::EDAS::Application](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::Application.md)：创建ECS集群的应用
+|企业级分布式应用服务EDAS|-   [ALIYUN::EDAS::Application](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::Application.md)：创建ECS集群的应用
 -   [ALIYUN::EDAS::Cluster](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::Cluster.md)：创建集群
 -   [ALIYUN::EDAS::ClusterMember](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::ClusterMember.md)：向集群中添加ECS实例
 -   [ALIYUN::EDAS::DeployGroup](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::DeployGroup.md)：创建分组
+-   [ALIYUN::EDAS::K8sApplication](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::K8sApplication.md)：在Kubernetes集群中创建应用
+-   [ALIYUN::EDAS::K8sCluster](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::K8sCluster.md)：创建K8s集群
 -   [ALIYUN::EDAS::UserDefineRegion](/intl.zh-CN/资源类型/EDAS/ALIYUN::EDAS::UserDefineRegion.md)：创建或编辑自定义命名空间 |
 |阿里云Elasticsearch|[ALIYUN::ElasticSearch::Instance](/intl.zh-CN/资源类型/ElasticSearch/ALIYUN::ElasticSearch::Instance.md)：创建ElasticSearch实例|
 |弹性高性能计算（E-HPC）|[ALIYUN::EHPC::Cluster](/intl.zh-CN/资源类型/EHPC/ALIYUN::EHPC::Cluster.md)：创建一个弹性高性能计算集群|
-|阿里云E-MapReduce（Elastic MapReduce）|[ALIYUN::EMR::Cluster](/intl.zh-CN/资源类型/EMR/ALIYUN::EMR::Cluster.md)：创建一个E-MapReduce集群|
-|边缘节点服务ENS（Edge Node Service）|[ALIYUN::ENS::Instance](/intl.zh-CN/资源类型/ENS/ALIYUN::ENS::Instance.md)：创建ENS实例|
+|阿里云E-MapReduce|-   [ALIYUN::EMR::Cluster](/intl.zh-CN/资源类型/EMR/ALIYUN::EMR::Cluster.md)：创建一个E-MapReduce集群
+-   [t2087454.md\#]()：创建或修改集群指定服务的配置信息 |
+|边缘节点服务ENS|[ALIYUN::ENS::Instance](/intl.zh-CN/资源类型/ENS/ALIYUN::ENS::Instance.md)：创建ENS实例|
 |弹性伸缩（Auto Scaling）|-   [ALIYUN::ESS::AlarmTask](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTask.md)：创建监控项报警任务
 -   [ALIYUN::ESS::AlarmTaskEnable](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTaskEnable.md)：启动报警任务
 -   [ALIYUN::ESS::LifecycleHook](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::LifecycleHook.md)：为伸缩组创建生命周期挂钩
@@ -129,7 +141,7 @@
 -   [ALIYUN::ESS::ScalingGroupEnable](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroupEnable.md)：启用伸缩组
 -   [ALIYUN::ESS::ScalingRule](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingRule.md)：创建伸缩规则
 -   [ALIYUN::ESS::ScheduledTask](/intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScheduledTask.md)：创建定时任务 |
-|函数计算FC（Function Compute）|-   [ALIYUN::FC::Alias](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Alias.md)：创建别名
+|函数计算FC|-   [ALIYUN::FC::Alias](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Alias.md)：创建别名
 -   [ALIYUN::FC::CustomDomain](/intl.zh-CN/资源类型/FC/ALIYUN::FC::CustomDomain.md)：创建自定义域名
 -   [ALIYUN::FC::Function](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Function.md)：创建函数
 -   [ALIYUN::FC::FunctionInvoker](/intl.zh-CN/资源类型/FC/ALIYUN::FC::FunctionInvoker.md)：执行函数
@@ -137,11 +149,11 @@
 -   [ALIYUN::FC::Service](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Service.md)：创建函数计算服务
 -   [ALIYUN::FC::Trigger](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Trigger.md)：触发函数
 -   [ALIYUN::FC::Version](/intl.zh-CN/资源类型/FC/ALIYUN::FC::Version.md)：发布版本 |
-|函数工作流FnF（Function Flow）|-   [ALIYUN::FNF::Flow](/intl.zh-CN/资源类型/FNF/ALIYUN::FNF::Flow.md)：创建流程
+|函数工作流FnF|-   [ALIYUN::FNF::Flow](/intl.zh-CN/资源类型/FNF/ALIYUN::FNF::Flow.md)：创建流程
 -   [ALIYUN::FNF::Schedule](/intl.zh-CN/资源类型/FNF/ALIYUN::FNF::Schedule.md)：创建一个定时调度 |
 |实时计算（Alibaba Cloud Realtime Compute）|-   [ALIYUN::FOAS::Cluster](/intl.zh-CN/资源类型/FOAS/ALIYUN::FOAS::Cluster.md)：为独享模式订单创建集群
 -   [ALIYUN::FOAS::Project](/intl.zh-CN/资源类型/FOAS/ALIYUN::FOAS::Project.md)：在集群中创建项目 |
-|全球加速GA（Global Accelerator）|-   [ALIYUN::GA::Accelerator](/intl.zh-CN/资源类型/GA/ALIYUN::GA::Accelerator.md)：创建全球加速实例
+|全球加速GA|-   [ALIYUN::GA::Accelerator](/intl.zh-CN/资源类型/GA/ALIYUN::GA::Accelerator.md)：创建全球加速实例
 -   [ALIYUN::GA::BandwidthPackage](/intl.zh-CN/资源类型/GA/ALIYUN::GA::BandwidthPackage.md)：创建带宽包
 -   [ALIYUN::GA::BandwidthPackageAcceleratorAddition](/intl.zh-CN/资源类型/GA/ALIYUN::GA::BandwidthPackageAcceleratorAddition.md)：将带宽包与全球加速实例绑定
 -   [ALIYUN::GA::EndpointGroup](/intl.zh-CN/资源类型/GA/ALIYUN::GA::EndpointGroup.md)：创建终端节点组
@@ -149,9 +161,9 @@
 -   [ALIYUN::GA::Listener](/intl.zh-CN/资源类型/GA/ALIYUN::GA::Listener.md)：创建监听 |
 |云桌面（Cloud Desktop）|-   [ALIYUN::GWS::Cluster](/intl.zh-CN/资源类型/GWS/ALIYUN::GWS::Cluster.md)：创建集群
 -   [ALIYUN::GWS::Instance](/intl.zh-CN/资源类型/GWS/ALIYUN::GWS::Instance.md)：创建实例 |
-|混合云备份服务HBR（Hybrid Backup Recovery）|-   [ALIYUN::HBR::BackupClients](/intl.zh-CN/资源类型/HBR/ALIYUN::HBR::BackupClients.md)：为ECS实例安装备份客户端
+|混合云备份服务HBR|-   [ALIYUN::HBR::BackupClients](/intl.zh-CN/资源类型/HBR/ALIYUN::HBR::BackupClients.md)：为ECS实例安装备份客户端
 -   [ALIYUN::HBR::RestoreJob](/intl.zh-CN/资源类型/HBR/ALIYUN::HBR::RestoreJob.md)：创建恢复任务 |
-|物联网平台IoT（Internet of things）|-   [ALIYUN::IOT::Device](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::Device.md)：注册设备
+|物联网平台IoT|-   [ALIYUN::IOT::Device](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::Device.md)：注册设备
 -   [ALIYUN::IOT::DeviceGroup](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::DeviceGroup.md)：创建分组
 -   [ALIYUN::IOT::Product](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::Product.md)：创建产品
 -   [ALIYUN::IOT::ProductTopic](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::ProductTopic.md)：为指定产品创建自定义Topic类
@@ -159,27 +171,28 @@
 -   [ALIYUN::IOT::RuleAction](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::RuleAction.md)：在指定的规则下创建一个规则动作 |
 |消息队列Kafka版|-   [ALIYUN::KAFKA::Instance](/intl.zh-CN/资源类型/KAFKA/ALIYUN::KAFKA::Instance.md)：创建Kafka实例
 -   [ALIYUN::KAFKA::Topic](/intl.zh-CN/资源类型/KAFKA/ALIYUN::KAFKA::Topic.md)：创建Topic |
-|密钥管理服务KMS（Key Management Service）|-   [ALIYUN::KMS::Alias](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md)：为主密钥创建别名
+|密钥管理服务KMS|-   [ALIYUN::KMS::Alias](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md)：为主密钥创建别名
 -   [ALIYUN::KMS::Key](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md)：创建主密钥
 -   [ALIYUN::KMS::Secret](/intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Secret.md)：创建凭据，并存入凭据的初始版本 |
 |云市场（Alibaba Cloud Marketplace）|[ALIYUN::MarketPlace::Order](/intl.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md)：购买云市场的资源|
-|云数据库Memcache版（ApsaraDB for Memcache）|-   [ALIYUN::Memcache::Instance]()：创建Memcache实例
+|大数据计算服务MaxCompute|[t2087401.md\#]()：创建表|
+|云数据库Memcache版|-   [ALIYUN::Memcache::Instance]()：创建Memcache实例
 -   [ALIYUN::Memcache::Whitelist]()：创建白名单 |
-|微服务引擎MSE（Microservice Engine）|[ALIYUN::MSE::Cluster](/intl.zh-CN/资源类型/MSE/ALIYUN::MSE::Cluster.md)：创建集群|
-|消息服务MNS（Message Notification Service）|-   [ALIYUN::MNS::Queue](/intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Queue.md)：创建消息队列
+|微服务引擎MSE|[ALIYUN::MSE::Cluster](/intl.zh-CN/资源类型/MSE/ALIYUN::MSE::Cluster.md)：创建集群|
+|消息服务MNS|-   [ALIYUN::MNS::Queue](/intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Queue.md)：创建消息队列
 -   [ALIYUN::MNS::Subscription](/intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Subscription.md)：描述订阅关系
 -   [ALIYUN::MNS::Topic](/intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Topic.md)：创建主题 |
-|云数据库MongoDB版（ApsaraDB for MongoDB）|-   [ALIYUN::MONGODB::Instance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md)：创建云数据库MongoDB版实例
+|云数据库MongoDB版|-   [ALIYUN::MONGODB::Instance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md)：创建云数据库MongoDB版实例
 -   [ALIYUN::MONGODB::ServerlessInstance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ServerlessInstance.md)：创建MongoDB Serverless版实例
 -   [ALIYUN::MONGODB::ShardingInstance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ShardingInstance.md)：创建或者克隆MongoDB分片集群实例 |
-|文件存储NAS（Network Attached Storage ）|-   [ALIYUN::NAS::AccessGroup](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessGroup.md)：创建权限组
+|文件存储NAS|-   [ALIYUN::NAS::AccessGroup](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessGroup.md)：创建权限组
 -   [ALIYUN::NAS::AccessRule](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessRule.md)：创建权限规则
 -   [ALIYUN::NAS::FileSystem](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::FileSystem.md)：创建新的文件系统
 -   [ALIYUN::NAS::MountTarget](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::MountTarget.md)：创建挂载点 |
-|运维编排服务OOS（Operation Orchestration Service）|-   [ALIYUN::OOS::Execution](/intl.zh-CN/资源类型/OOS/ALIYUN::OOS::Execution.md)：启动一个执行
+|运维编排服务OOS|-   [ALIYUN::OOS::Execution](/intl.zh-CN/资源类型/OOS/ALIYUN::OOS::Execution.md)：启动一个执行
 -   [ALIYUN::OOS::Template](/intl.zh-CN/资源类型/OOS/ALIYUN::OOS::Template.md)：创建模版
 -   [ALIYUN::OOS::Parameter](/intl.zh-CN/资源类型/OOS/ALIYUN::OOS::Parameter.md)：创建一个普通参数 |
-|对象存储服务OSS（Object Storage Service）|[ALIYUN::OSS::Bucket](/intl.zh-CN/资源类型/OSS/ALIYUN::OSS::Bucket.md)：创建OSS存储空间|
+|对象存储服务OSS|[ALIYUN::OSS::Bucket](/intl.zh-CN/资源类型/OSS/ALIYUN::OSS::Bucket.md)：创建OSS存储空间|
 |表格存储（Table Store）|-   [ALIYUN::OTS::Instance](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::Instance.md)：创建表格存储实例
 -   [ALIYUN::OTS::SearchIndex](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::SearchIndex.md)：在数据表上创建一个多元索引
 -   [ALIYUN::OTS::Table](/intl.zh-CN/资源类型/OTS/ALIYUN::OTS::Table.md)：创建表
@@ -193,20 +206,23 @@
 -   [ALIYUN::POLARDB::DBInstance](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBInstance.md)：在POLARDB集群下创建一个新的数据库
 -   [ALIYUN::POLARDB::DBNodes](/intl.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBNodes.md)：增加POLARDB集群节点 |
 |私网连接（PrivateLink）|-   [ALIYUN::PrivateLink::VpcEndpoint](/intl.zh-CN/资源类型/PrivateLink/ALIYUN::PrivateLink::VpcEndpoint.md)：创建终端节点
--   [ALIYUN::PrivateLink::VpcEndpointService](/intl.zh-CN/资源类型/PrivateLink/ALIYUN::PrivateLink::VpcEndpointService.md)：创建终端节点服务 |
+-   [ALIYUN::PrivateLink::VpcEndpointService](/intl.zh-CN/资源类型/PrivateLink/ALIYUN::PrivateLink::VpcEndpointService.md)：创建终端节点服务
+-   [ALIYUN::PrivateLink::VpcEndpointServiceAttachment](/intl.zh-CN/资源类型/PrivateLink/ALIYUN::PrivateLink::VpcEndpointServiceAttachment.md)：为终端节点服务添加服务资源 |
 |云解析PrivateZone|-   [ALIYUN::PVTZ::Zone](/intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::Zone.md)：创建PrivateZone
 -   [ALIYUN::PVTZ::ZoneRecord](/intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneRecord.md)：添加PrivateZone的解析记录
 -   [ALIYUN::PVTZ::ZoneVpcBinder](/intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneVpcBinder.md)：关联或解除Zone与VPC列表两者之间的关系 |
-|访问控制RAM（Resource Access Management）|-   [ALIYUN::RAM::AccessKey](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::AccessKey.md)：获取指定用户的AccessKey
+|访问控制RAM|-   [ALIYUN::RAM::AccessKey](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::AccessKey.md)：获取指定用户的AccessKey
 -   [ALIYUN::RAM::AttachPolicyToRole](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::AttachPolicyToRole.md)：为指定RAM角色添加权限
 -   [ALIYUN::RAM::AttachPolicyToUser](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::AttachPolicyToUser.md)：为指定RAM用户添加权限
 -   [ALIYUN::RAM::Group](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::Group.md)：创建RAM用户组
 -   [ALIYUN::RAM::ManagedPolicy](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::ManagedPolicy.md)：创建RAM权限策略
+-   [ALIYUN::RAM::RamAccountAlias](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::RamAccountAlias.md)：创建账号别名
 -   [ALIYUN::RAM::Role](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::Role.md)：创建RAM用户
 -   [ALIYUN::RAM::SAMLProvider](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::SAMLProvider.md)：创建角色SSO身份提供商
+-   [ALIYUN::RAM::SecurityPreference](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::SecurityPreference.md)：设置RAM用户的全局安全首选项
 -   [ALIYUN::RAM::User](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::User.md)：创建RAM子账号
 -   [ALIYUN::RAM::UserToGroupAddition](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::UserToGroupAddition.md)：添加RAM用户到用户组 |
-|阿里云关系型数据库RDS（Relational Database Service）|-   [ALIYUN::RDS::Account](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::Account.md)：创建管理数据库的账号
+|阿里云关系型数据库RDS|-   [ALIYUN::RDS::Account](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::Account.md)：创建管理数据库的账号
 -   [ALIYUN::RDS::AccountPrivilege](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::AccountPrivilege.md)：授权账号访问数据库
 -   [ALIYUN::RDS::ADInfo](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::ADInfo.md)：配置AD域服务
 -   [ALIYUN::RDS::Database](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::Database.md)：在实例下创建数据库
@@ -216,33 +232,37 @@
 -   [ALIYUN::RDS::DBInstanceSecurityIps](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceSecurityIps.md)：修改实例访问白名单
 -   [ALIYUN::RDS::PrepayDBInstance](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::PrepayDBInstance.md)：创建预付费数据库实例
 -   [ALIYUN::RDS::ReadOnlyDBInstance](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::ReadOnlyDBInstance.md)：为某个实例创建一个只读实例 |
-|云数据库Redis版（ApsaraDB for Redis）|-   [ALIYUN::REDIS::Account](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Account.md)：创建有特定权限的账号
+|云数据库Redis版|-   [ALIYUN::REDIS::Account](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Account.md)：创建有特定权限的账号
 -   [ALIYUN::REDIS::Instance](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Instance.md)：创建云数据库Redis实例
 -   [ALIYUN::REDIS::PrepayInstance](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::PrepayInstance.md)：创建预付费云数据库Redis版实例
 -   [ALIYUN::REDIS::Whitelist](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Whitelist.md)：设置Redis实例的IP白名单 |
 |阿里云资源管理（Resource Management）|-   [ALIYUN::ResourceManager::Account](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Account.md)：创建资源账号类型的成员
+-   [ALIYUN::ResourceManager::ControlPolicy](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ControlPolicy.md)：创建自定义管控策略
+-   [ALIYUN::ResourceManager::ControlPolicyAttachment](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ControlPolicyAttachment.md)：绑定自定义管控策略
 -   [ALIYUN::ResourceManager::Folder](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Folder.md)：创建资源夹
 -   [ALIYUN::ResourceManager::Handshake](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Handshake.md)：创建邀请
+-   [ALIYUN::ResourceManager::PolicyAttachment](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::PolicyAttachment.md)：为指定对象添加权限策略
 -   [ALIYUN::ResourceManager::ResourceDirectory](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ResourceDirectory.md)：开通资源目录
--   [ALIYUN::ResourceManager::ResourceGroup](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ResourceGroup.md)：创建资源组 |
+-   [ALIYUN::ResourceManager::ResourceGroup](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ResourceGroup.md)：创建资源组
+-   [ALIYUN::ResourceManager::ResourceShare](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ResourceShare.md)：创建共享单元 |
 |消息队列RocketMQ版|-   [ALIYUN::ROCKETMQ::Instance](/intl.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Instance.md)：创建标准版实例
 -   [ALIYUN::ROCKETMQ::Group](/intl.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Group.md)：创建客户端Group ID
 -   [ALIYUN::ROCKETMQ::Topic](/intl.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Topic.md)：创建Topic |
-|资源编排服务ROS（Resource Orchestration Service）|-   [ALIYUN::ROS::AutoEnableService](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::AutoEnableService.md)：自动开通服务
+|资源编排服务ROS|-   [ALIYUN::ROS::AutoEnableService](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::AutoEnableService.md)：自动开通服务
 -   [ALIYUN::ROS::CustomResource](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::CustomResource.md)：创建自定义资源
 -   [ALIYUN::ROS::WaitCondition](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitCondition.md)：创建处理UserData消息的实例
 -   [ALIYUN::ROS::WaitConditionHandle](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitConditionHandle.md)：创建在UserData执行过程中发送消息和接收消息的实例
 -   [ALIYUN::ROS::Stack](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::Stack.md)：创建嵌套资源栈 |
-|Serverless应用引擎SAE（Serverless App Engine ）|-   [ALIYUN::SAE::Application](/intl.zh-CN/资源类型/SAE/ALIYUN::SAE::Application.md)：创建轻量级分布式应用服务应用
+|Serverless应用引擎SAE|-   [ALIYUN::SAE::Application](/intl.zh-CN/资源类型/SAE/ALIYUN::SAE::Application.md)：创建轻量级分布式应用服务应用
 -   [ALIYUN::SAE::Namespace](/intl.zh-CN/资源类型/SAE/ALIYUN::SAE::Namespace.md)：创建命名空间
 -   [ALIYUN::SAE::SlbBinding](/intl.zh-CN/资源类型/SAE/ALIYUN::SAE::SlbBinding.md)：为应用绑定SLB |
-|智能接入网关SAG（Smart Access Gateway）|-   [ALIYUN::SAG::ACLAssociation](/intl.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLAssociation.md)：将访问控制与智能接入网关实例绑定
+|智能接入网关SAG|-   [ALIYUN::SAG::ACLAssociation](/intl.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLAssociation.md)：将访问控制与智能接入网关实例绑定
 -   [ALIYUN::SAG::ACLRule](/intl.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLRule.md)：添加访问控制规则
 -   [ALIYUN::SAG::CloudConnectNetwork](/intl.zh-CN/资源类型/SAG/ALIYUN::SAG::CloudConnectNetwork.md)：创建云连接网
 -   [ALIYUN::SAG::ACL](/intl.zh-CN/资源类型/SAG/ALIYUN::SAG::ACL.md)：创建访问控制
 -   [ALIYUN::SAG::GrantCcnToCen](/intl.zh-CN/资源类型/SAG/ALIYUN::SAG::GrantCcnToCen.md)：将云企业网实例授权给云连接网
 -   [ALIYUN::SAG::SmartAccessGatewayBinding](/intl.zh-CN/资源类型/SAG/ALIYUN::SAG::SmartAccessGatewayBinding.md)：将智能接入网关绑定到云连接网 |
-|负载均衡SLB（Server Load Balancer）|-   [ALIYUN::SLB::AccessControl](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::AccessControl.md)：创建访问控制策略组
+|负载均衡SLB|-   [ALIYUN::SLB::AccessControl](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::AccessControl.md)：创建访问控制策略组
 -   [ALIYUN::SLB::BackendServerAttachment](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerAttachment.md)：向负载均衡添加后端服务器
 -   [ALIYUN::SLB::BackendServerToVServerGroupAddition](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerToVServerGroupAddition.md)：将后端服务器添加到虚拟服务器组
 -   [ALIYUN::SLB::Certificate](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::Certificate.md)：上传证书
@@ -253,7 +273,8 @@
 -   [ALIYUN::SLB::MasterSlaveServerGroup](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::MasterSlaveServerGroup.md)：创建主备服务器组
 -   [ALIYUN::SLB::Rule](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::Rule.md)：为HTTP或HTTPS监听添加转发规则
 -   [ALIYUN::SLB::VServerGroup](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::VServerGroup.md)：创建虚拟服务器组并添加后端服务器到负载均衡实例 |
-|日志服务SLS（Log Service）|-   [ALIYUN::SLS::Alert](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Alert.md)：创建告警
+|日志服务SLS|-   [ALIYUN::SLS::Alert](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Alert.md)：创建告警
+-   [ALIYUN::SLS::Audit](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Audit.md)：配置日志审计服务
 -   [ALIYUN::SLS::ApplyConfigToMachineGroup](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::ApplyConfigToMachineGroup.md)：将日志服务的日志配置应用于机器组
 -   [ALIYUN::SLS::Index](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Index.md)：为指定的Logstore创建索引
 -   [ALIYUN::SLS::Logstore](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Logstore.md)：日志项目下创建日志库
@@ -261,21 +282,29 @@
 -   [ALIYUN::SLS::Project](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Project.md)：创建日志项目
 -   [ALIYUN::SLS::LogtailConfig](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::LogtailConfig.md)：配置采集数据时的Logtail参数
 -   [ALIYUN::SLS::Savedsearch](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Savedsearch.md)：将查询结果保存为快速查询 |
-|时序数据库TSDB（Time Series Database）|[ALIYUN::TSDB::HiTSDBInstance](/intl.zh-CN/资源类型/TSDB/ALIYUN::TSDB::HiTSDBInstance.md)：创建时序数据库实例|
-|极致互联网服务UIS（Ultimate Internet Service）|-   [ALIYUN::UIS::Uis](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md)：创建UIS实例
+|时序数据库TSDB|[ALIYUN::TSDB::HiTSDBInstance](/intl.zh-CN/资源类型/TSDB/ALIYUN::TSDB::HiTSDBInstance.md)：创建时序数据库实例|
+|极致互联网服务UIS|-   [ALIYUN::UIS::Uis](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md)：创建UIS实例
 -   [ALIYUN::UIS::UisConnection](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::UisConnection.md)：创建隧道连接
 -   [ALIYUN::UIS::UisNode](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::UisNode.md)：为已创建的实例添加上车点实例 |
-|专有网络VPC（Virtual Private Cloud）|-   [ALIYUN::VPC::AnycastEIP](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::AnycastEIP.md)：创建任播弹性公网IP（Anycast EIP）实例
+|专有网络VPC|-   [ALIYUN::VPC::AnycastEIP](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::AnycastEIP.md)：创建任播弹性公网IP（Anycast EIP）实例
 -   [ALIYUN::VPC::AnycastEIPAssociation](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::AnycastEIPAssociation.md)：将任播弹性公网IP（Anycast EIP）绑定到指定地域的云资源实例上
+-   [ALIYUN::VPC::BgpGroup](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::BgpGroup.md)：为指定的边界路由器（VBR）创建一个BGP（多线）组
+-   [ALIYUN::VPC::BgpNetwork](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::BgpNetwork.md)：宣告BGP网络
+-   [ALIYUN::VPC::BgpPeer](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::BgpPeer.md)：向指定的BGP组中添加BGP邻居
 -   [ALIYUN::VPC::CommonBandwidthPackage](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackage.md)：创建共享带宽实例
 -   [ALIYUN::VPC::CommonBandwidthPackageIp](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackageIp.md)：添加EIP到共享带宽中
 -   [ALIYUN::VPC::CustomerGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::CustomerGateway.md)：创建用户网关
 -   [ALIYUN::VPC::EIP](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIP.md)：申请弹性公网IP
 -   [ALIYUN::VPC::EIPAssociation](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIPAssociation.md)：绑定弹性公网IP
+-   [ALIYUN::VPC::EIPSegment](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIPSegment.md)：申请连续弹性公网IP（EIP）
+-   [ALIYUN::VPC::FlowLog](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::FlowLog.md)：创建流日志
 -   [ALIYUN::VPC::GrantInstanceToCen](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::GrantInstanceToCen.md)：为云企业网实例授权
 -   [ALIYUN::VPC::Ipv6Gateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::Ipv6Gateway.md)：创建IPv6网关
 -   [ALIYUN::VPC::Ipv6InternetBandwidth](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::Ipv6InternetBandwidth.md)：为IPv6地址购买公网带宽
+-   [ALIYUN::VPC::IpsecServer](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::IpsecServer.md)：创建IPsec服务端
 -   [ALIYUN::VPC::NatGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::NatGateway.md)：创建NAT网关
+-   [ALIYUN::VPC::NetworkAcl](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::NetworkAcl.md)：创建网络ACL（Network Access Control List）
+-   [ALIYUN::VPC::NetworkAclAssociation](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::NetworkAclAssociation.md)：绑定网络ACL到交换机
 -   [ALIYUN::VPC::PeeringRouterInterfaceBinding](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceBinding.md)：绑定将要互联的两个路由器接口信息
 -   [ALIYUN::VPC::PeeringRouterInterfaceConnection](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceConnection.md)：发起路由器接口链接
 -   [ALIYUN::VPC::RouterInterface](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::RouterInterface.md)：创建路由器接口
@@ -283,12 +312,16 @@
 -   [ALIYUN::VPC::RouteTableAssociation](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::RouteTableAssociation.md)：绑定自定义路由表和同一VPC内的交换机
 -   [ALIYUN::VPC::SnatEntry](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::SnatEntry.md)：在SNAT列表中添加SNAT条目
 -   [ALIYUN::VPC::SslVpnClientCert](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::SslVpnClientCert.md)：创建SSL-VPN客户端证书
+-   [ALIYUN::VPC::VirtualBorderRouter](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::VirtualBorderRouter.md)：创建边界路由器（VBR）
 -   [ALIYUN::VPC::SslVpnServer](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::SslVpnServer.md)：创建SSL-VPN服务端
 -   [ALIYUN::VPC::VpnConnection](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnConnection.md)：创建IPsec连接
--   [ALIYUN::VPC::VpnGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnGateway.md)：创建VPN网关 |
+-   [ALIYUN::VPC::VpnGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnGateway.md)：创建VPN网关
+-   [ALIYUN::VPC::VpnPbrRouteEntry](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnPbrRouteEntry.md)：创建VPN策略路由
+-   [ALIYUN::VPC::VpnRouteEntry](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnRouteEntry.md)：创建VPN目的路由 |
 |视频监控（Video Surveillance）|[ALIYUN::VS::Group](/intl.zh-CN/资源类型/VS/ALIYUN::VS::Group.md)：创建业务空间|
-|Web应用防火墙WAF（Web Application Firewall）|-   [ALIYUN::WAF::AclRule](/intl.zh-CN/资源类型/WAF/ALIYUN::WAF::AclRule.md)：为指定域名添加精准访问控制规则
+|Web应用防火墙WAF|-   [ALIYUN::WAF::AclRule](/intl.zh-CN/资源类型/WAF/ALIYUN::WAF::AclRule.md)：为指定域名添加精准访问控制规则
 -   [ALIYUN::WAF::DomainConfig](/intl.zh-CN/资源类型/WAF/ALIYUN::WAF::DomainConfig.md)：添加域名配置信息
 -   [ALIYUN::WAF::Instance](/intl.zh-CN/资源类型/WAF/ALIYUN::WAF::Instance.md)：创建Web应用防火墙实例
+-   [ALIYUN::WAF::LogServiceEnable](/intl.zh-CN/资源类型/WAF/ALIYUN::WAF::LogServiceEnable.md)：开启指定域名配置的日志采集功能
 -   [ALIYUN::WAF::WafSwitch](/intl.zh-CN/资源类型/WAF/ALIYUN::WAF::WafSwitch.md)：打开或关闭Web攻击防护功能开关 |
 
